# fastapi-dudu

./: .gitignore  pyproject.toml  requirements.txt
fastzero/: app.py  database.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 68b2ba765dfc_add_table_users.py  8c625cb512e0_nova_primeira.py
tests/: conftest.py  test_app.py  test_db.py  test_hello_world.py
